[gd_scene load_steps=7 format=3]

[ext_resource type="Theme" path="res://assets/themes/windows_95_theme.tres" id="1"]
[ext_resource type="FontFile" path="res://assets/fonts/Chicago.ttf" id="2"]
[ext_resource type="Texture2D" path="res://assets/logos/mycog.png" id="3"]
[ext_resource type="PackedScene" path="res://components/siggy/siggy.tscn" id="4"]
[ext_resource type="Script" path="res://components/start_panel_window.gd" id="5"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.0705882, 0, 0.407843, 0.815686)

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.306923, 0.306923, 0.306923, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="StartPanel" type="Panel"]
unique_name_in_owner = true
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -525.0
offset_right = 328.0
offset_bottom = -185.0
grow_vertical = 0
scale = Vector2(1.4, 1.4)
theme_override_styles/panel = SubResource("1")
script = ExtResource("5")
siggy_scene = ExtResource("4")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1")

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
visible = false
z_as_relative = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("2")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -10.0
offset_right = 38.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2")
text = "S I G M A"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="AppListContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Favorites" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="SiggyButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/Favorites"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 6
text = "Siggy"

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/Favorites"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.729169, 0.47256, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Load"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/Favorites"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.843137, 0.827451, 0.121569, 1)
theme_override_font_sizes/font_size = 14
text = "Save"

[node name="SleepButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/Favorites"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
text = " sleep "

[node name="SleepButton2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/Favorites"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
text = "week sleep "

[node name="LogoutButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/Favorites"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Logout"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/Favorites"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme = ExtResource("1")
icon = ExtResource("3")

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/Favorites/SiggyButton" to="." method="_on_siggy_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/Favorites/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/Favorites/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/Favorites/SleepButton" to="." method="_on_sleep_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/Favorites/SleepButton2" to="." method="_on_sleep_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/Favorites/LogoutButton" to="." method="_on_logout_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/Favorites/SettingsButton" to="." method="_on_settings_button_pressed"]
